--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "angular-task",
   "version": "0.0.0",
+  
+  "browser": {
+    "[module-name]": false   
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "webpack serve --mode production --open",
+    "build": "webpack build --mode production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -28,12 +32,20 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "bootstrap": "~5.1.3",
+    "file-loader": "^6.2.0",
+    "html-loader": "^3.0.1",
+    "html-webpack-plugin": "^4.5.2",
     "jasmine-core": "~3.8.0",
+    "jquery": "~3.6.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "raw-loader": "^4.0.2",
+    "typescript": "~4.3.5",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1"
   }
 }
